--- a/style.css
+++ b/style.css
@@ -17,3 +17,15 @@ input {
     padding-right: 10px;
     box-sizing: border-box;
 }
+ul{
+    margin-top:20px;
+    list-style-type:none;
+    padding-left:0;
+}
+li{
+    margin-top:5px;
+}
+li a{
+    
+    color:green;
+}
